--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,13 @@
 }
 }
 
+.relative img{
+  padding-top: 85px;
+}
 
+.js img{
+  padding-top: 0px  !important;
+}
 
 /* Styling for dropdown menus */
 .navbar-dropdown {
