--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,7 @@ body{
 
 p{
   text-align: justify !important;
+  line-break: anywhere;
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight:300;
