--- a/src/index.css
+++ b/src/index.css
@@ -77,8 +77,8 @@ body{
     "YTLC" 500;
 }
 
-
-p{
+@media screen and (max-width:768px){
+  p{
   text-align: justify !important;
   line-break: anywhere;
   font-family: "Montserrat", sans-serif;
@@ -89,6 +89,23 @@ p{
     "wdth" 100,
     "YTLC" 500;
 }
+}
+
+@media screen and (min-width:769px){
+  p{
+  text-align: justify !important;
+
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight:300;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100,
+    "YTLC" 500;
+}
+}
+
+
 
 
 nav {
