--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,49 @@
 @import "~slick-carousel/slick/slick.css";
 /* slick-carousel/slick/slick-theme.css */
 @import "~slick-carousel/slick/slick-theme.css";
+
+/* Mobile dropdown styles */
+.navbar-dropdown-content {
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transform: translateY(-10px); /* Start slightly above */
+    transition: max-height 0.3s ease, opacity 0.3s ease, transform 0.3s ease;
+  }
+  
+  /* When dropdown is open, allow max-height and opacity to animate */
+  .navbar-dropdown.open .navbar-dropdown-content {
+    max-height: 500px; /* Set a value that is larger than the largest dropdown content */
+    opacity: 1;
+    transform: translateY(0); /* Slide in from above */
+  }
+  
+
+  html {
+    scroll-behavior: smooth;
+  }
+  
+  .slick-slider {
+    opacity: 0;
+    transition: opacity 0.5s ease-out;
+  }
+  
+  .slick-slider.is-visible {
+    opacity: 1;
+  }
+  
+  .slick-dots {
+    bottom: 20px;
+  }
+  
+  .slick-dots li button:before {
+    color: white;
+    opacity: 0.5;
+  }
+  
+  .slick-dots li.slick-active button:before {
+    color: white;
+    opacity: 1;
+  }
+  
+  
