--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,7 @@ nav {
    position: fixed;
     top: 0;
     width: 100%;
-    background: white;
+    background: transparent;
     z-index: 9999999;
 }
 
