--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,8 @@
   top: 100%;
   left: 0;
   z-index: 50;
-  background-color: white;
+  background-color:#554d4d;
+  
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
