--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@
 }
 
 .relative img{
+  padding-top: 80px;
+}
+
+.relative .J{
   padding-top: 0px;
 }
 
@@ -109,7 +113,26 @@ body{
 
 
 
-nav {
+nav  {
+  font-family: "Source Serif 4", sans-serif !important;
+  font-size: 20px !important;
+    
+    font-size: 20px;
+    font-weight: normal;
+   
+    color: rgba(111, 107, 103, .7);
+    padding: 10px;
+    text-shadow: none;
+   position: absolute;
+    top: 0;
+    width: 100%;
+    background:transparent;
+    z-index: 9999999;
+}
+
+
+
+nav  .f{
   font-family: "Source Serif 4", sans-serif !important;
   font-size: 20px !important;
     
@@ -122,9 +145,12 @@ nav {
    position: fixed;
     top: 0;
     width: 100%;
-    background: transparent;
+    background:#fff;
     z-index: 9999999;
 }
+
+
+
 
 li{
   text-align: justify !important;
