--- a/src/index.css
+++ b/src/index.css
@@ -674,7 +674,7 @@ p  {
     font-family: "Montserrat", sans-serif;
     line-height: 40px;
       font-size: 20px;
-    
+    color: white;
   }
   
 }
@@ -684,6 +684,7 @@ p  {
     font-family: "Montserrat", sans-serif;
     line-height: 60px;
       font-size: 50px;
+      color: white;
   }
   
   
