--- a/src/service.css
+++ b/src/service.css
@@ -14,7 +14,7 @@
 } 
 
 .justify-content-center { 
-    justify-content: center;
+    justify-content: center ;
 } 
 
 
@@ -57,23 +57,30 @@
     color: #fff;
 } 
 
-.work-bx { 
-    position: relative; 
-    box-shadow: 0px 10px 60px 0px rgba(31, 34, 120, 0.1); 
-    padding: 40px 30px; 
-    border-radius: 20px; 
-    background-color: #fff; 
-    -webkit-transition: all 0.5s; 
-    -ms-transition: all 0.5s; 
-    transition: all 0.5s; 
-    overflow: hidden; 
-    z-index: 1;
-} 
 
-.work-bx { 
-    width: 270px ; 
-    margin: 15px;
-} 
+@media screen and (max-width:768px) {
+    .work-bx { 
+    
+        margin: 15px;
+        min-width: 40%;
+       
+        
+       } 
+       
+}
+
+@media screen and (min-width:768px) {
+    .work-bx { 
+    
+        margin: 15px;
+        width: 20%;
+       position: relative;
+       padding: 20px;
+        
+       } 
+       
+}
+
 
 .work-bx  { 
     margin-top: 30px;
@@ -87,7 +94,7 @@
     position: absolute; 
     top: 0; 
     right: 0; 
-    z-index: -1; 
+    z-index: -10; 
     -webkit-transition: all 0.5s; 
     -ms-transition: all 0.5s; 
     transition: all 0.5s; 
@@ -96,6 +103,7 @@
     -ms-transform-origin: top; 
     -webkit-transform-origin: top; 
     -o-transform-origin: top;
+    border-radius: 15px;
 } 
 
 .work-bx.active:after,.work-bx:hover:after { 
@@ -119,24 +127,24 @@
     font-weight: 900; 
     margin-bottom: 30px; 
     line-height: 80px; 
-    /* -webkit-text-stroke: 2px #2f4c39;  */
+   
     text-shadow: 0 10px 0 #c0d8c8; 
     color: transparent;
 } 
 
 .work-bx .work-num-bx  { 
-    /* -webkit-text-stroke: 2px #3d614a;  */
+    
     text-shadow: 0 10px 0 #11bca3;
 } 
 
  .work-bx:hover .work-num-bx { 
     text-shadow: 0 10px 0 #ffbebc; 
-    /* -webkit-text-stroke: 2px #fff; */
+    
 } 
 
 .work-bx.active .work-num-bx, .work-bx:hover .work-num-bx { 
     text-shadow: 0 10px 0 #ffbebc; 
-    /* -webkit-text-stroke: 2px #fff; */
+    
 } 
 
 .work-bx .work-content  { 
@@ -145,16 +153,7 @@
     -ms-transition: all 0.5s;
 } 
 
-/* a { 
-    color: #11bca3; 
-    text-decoration: underline;
-} 
 
-a { 
-    text-decoration: none; 
-    outline: none; 
-    color: #11bca3;
-}  */
 
 .btn { 
     display: inline-block; 
