--- a/src/Banner2.css
+++ b/src/Banner2.css
@@ -18,6 +18,7 @@
 } 
 
 .row { 
+    gap:15px;
     --bs-gutter-x: 1.5rem; 
     --bs-gutter-y: 0; 
     display: -moz-box; 
@@ -85,10 +86,25 @@
   } 
 }     
 
-.first-facility-item { 
+
+
+@media screen and (max-width:768px){
+    .first-facility-item { 
+    position: relative; 
+    padding-left: 0px;
+} 
+}
+@media screen and (min-width:768px){
+    .first-facility-item { 
     position: relative; 
     padding-left: 90px;
 } 
+}
+
+
+
+
+
 
 .first-facility-item img{
   width: 60px;
