--- a/src/Testimonal.css
+++ b/src/Testimonal.css
@@ -1,4 +1,3 @@
-
 .testimonial-container {
     width: 100%;
     max-width: 800px; 
@@ -15,13 +14,12 @@
     position: relative;
     height: auto;
     justify-content: center; 
-  align-items: center; 
-  gap: 35px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
- 
+    align-items: center; 
+    gap: 35px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   @media (min-width: 1024px) {
@@ -52,7 +50,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 190px;
     
     bottom: 20px;
   }
@@ -62,7 +60,6 @@
     height: 80px;
     border-radius: 50%; 
     object-fit: cover; 
-    border: 3px solid #ff7f50;
     margin-bottom: 10px;
   }
   
@@ -93,10 +90,6 @@
     color: #ff7f50;
   }
   
-
-
-
-  
 @media (max-width: 768px) {
   .testimonial-bx {
     height: auto;
@@ -125,7 +118,6 @@
     font-size: 20px;
   }
 }
-
 
 @media (max-width: 480px) {
   .testimonial-container {
@@ -165,6 +157,7 @@
 
 .testimonial-swiper .swiper-slide {
   padding: 10px; 
+  padding-top: 40px;
 }
 
 .testimonial-wrapper {
@@ -222,24 +215,19 @@
 }
 
 
-
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-
-
-
-
-  
+.sticky-comma {
+  position: absolute;
+  top: -30px;
+  left: 50px;
+  background: rgb(182, 182, 182);
+  color: rgb(255, 255, 255);
+  font-size: 84px;
+  font-weight: bold;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20%;
+  padding-top: 30px; 
+}
