--- a/src/service.css
+++ b/src/service.css
@@ -57,14 +57,15 @@
     color: #fff;
 } 
 
+/* .overflow-scroll{
+    overflow: hidden;
+} */
 
 @media screen and (max-width:768px) {
     .work-bx { 
     
         margin: 15px;
         min-width: 40%;
-       
-        
        } 
        
 }
@@ -78,7 +79,7 @@
        padding: 20px;
         
        } 
-       
+      
 }
 
 
@@ -86,12 +87,11 @@
     margin-top: 30px;
 } 
 
-@media screen and (min-width:700px){
-    .work-bx:after { 
+.work-bx:after { 
     content: ""; 
     height: 0; 
     width: 100%; 
-    background-color: #648dbd; 
+    background-color: white; 
     position: absolute; 
     top: 0; 
     right: 0; 
@@ -106,7 +106,6 @@
     -o-transform-origin: top;
     border-radius: 15px;
 } 
-}
 
 .work-bx.active:after,.work-bx:hover:after { 
     height: 100%; 
@@ -130,25 +129,21 @@
     margin-bottom: 30px; 
     line-height: 80px; 
    
-    text-shadow: 0 10px 0 #c0d8c8; 
+    text-shadow: 0 10px 0 #233f8f;
     color: transparent;
 } 
 
-.work-bx .work-num-bx  { 
-    
-    text-shadow: 0 10px 0 #11bca3;
-} 
+ 
 
  .work-bx:hover .work-num-bx { 
-    text-shadow: 0 10px 0 #ffbebc; 
+    text-shadow: 0 10px 0 #df3636; 
     
 } 
-@media screen and (min-width:700px){
+
 .work-bx.active .work-num-bx, .work-bx:hover .work-num-bx { 
-    text-shadow: 0 10px 0 #ffbebc; 
+    text-shadow: 0 10px 0 #df3636; 
     
 } 
-}
 
 .work-bx .work-content  { 
     transition: all 0.5s; 
@@ -158,79 +153,8 @@
 
 
 
-.btn { 
-    display: inline-block; 
-    font-weight: 400; 
-    line-height: 1.5; 
-    color: #444; 
-    text-align: center; 
-    text-decoration: none; 
-    vertical-align: middle; 
-    cursor: pointer; 
-    user-select: none; 
-    background-color: transparent; 
-    border: 1px solid transparent; 
-    padding: 0.375rem 0.75rem; 
-    font-size: 1rem; 
-    border-radius: 0.25rem; 
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-} 
 
-.btn-success { 
-    color: #000; 
-    background-color: #99c2a5; 
-    border-color: #99c2a5;
-} 
 
-.btn { 
-    padding: 15px 30px; 
-    border-radius: 8px; 
-    text-decoration: none; 
-    font-weight: 500; 
-    font-size: 14px; 
-    -webkit-transition: all 0.5s; 
-    -ms-transition: all 0.5s; 
-    transition: all 0.5s; 
-    border-width: 2px; 
-    line-height: 1.2;
-} 
-
-.btn-success { 
-    background-color: #99c2a5;
-} 
-
-.btn-success { 
-    color: white;
-} 
-
-.work-bx .btn  { 
-    font-weight: 600;
-} 
-
-.work-bx .btn-success  { 
-    background-color: #11bca3; 
-    border-color: #11bca3;
-} 
-
-a:hover { 
-    color: #087678;
-} 
-
-a:hover { 
-    text-decoration: none; 
-    outline: none; 
-    color: #11bca3;
-} 
-
-.btn:hover { 
-    color: #444;
-} 
-
-.btn-success:hover { 
-    color: #000; 
-    background-color: #a8cbb3; 
-    border-color: #a3c8ae;
-} 
 
  .work-bx:hover .btn { 
     background-color: #fff; 
@@ -262,12 +186,10 @@ h5 {
 } 
 
 /* Hover effect: Change text color to white */
-@media screen and (min-width:700px){
 .work-bx:hover .work-content h5,
 .work-bx:hover .work-content p {
-    color: white;
+    color: #233f8f;
     transition: color 0.3s ease-in-out;
-}
 }
 
 h5 { 
@@ -343,4 +265,5 @@ p {
     text-align: center;
     width: 100%;
     margin-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
   }
