--- a/src/Testimonal.css
+++ b/src/Testimonal.css
@@ -1,3 +1,4 @@
+
 .testimonial-container {
     width: 100%;
     max-width: 800px; 
@@ -6,7 +7,7 @@
   }
   
   .testimonial-bx {
-    background: hsl(174, 75%, 32%);
+    background: #233f8f;
     padding: 20px;
     border-radius: 50px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -64,10 +65,11 @@
   }
   
   .name {
-    font-size: 25px;
+    font-size: 35px;
     font-weight: bold;
     color: #333;
     margin: 5px 0;
+    text-transform: uppercase;
   }
   
   .client-info p {
@@ -112,6 +114,7 @@
 
   .name {
     font-size: 15px;
+    
   }
 
   .quote-icon {
@@ -215,13 +218,14 @@
 }
 
 
+
 .sticky-comma {
   position: absolute;
-  top: -30px;
+  top: -40px;
   left: 50px;
-  background: rgb(182, 182, 182);
-  color: rgb(255, 255, 255);
-  font-size: 84px;
+  background: rgb(228, 225, 225);
+  color: #ffffff;
+  font-size: 200px;
   font-weight: bold;
   width: 100px;
   height: 100px;
@@ -229,5 +233,28 @@
   align-items: center;
   justify-content: center;
   border-radius: 20%;
-  padding-top: 30px; 
+  padding-top: 80px; 
 }
+
+
+
+
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+  
